--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="container-xl header mx-5">
         <div class="row d-flex align-items-center">
             <div class="col-md-6">
-                <img src="../img/logo.svg" alt="meeti" class="logo">
+                <img src="\img\logo.svg" alt="meeti" class="logo">
                 <h2 class="display-3 ">Unete, la vida esta en un Meeti</h2>
                 <p>Únete a mas de 300 mil organizadores que están compartiendo su pasión 
                     y construyendo una comunidad</p>                
