--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     y construyendo una comunidad</p>                
                 <a href="#" class="btn btn-danger mb-4 mb-md-4" type="button">Inicia un grupo</a>
             </div>
-            <div class="col-md-6"><img src="/img/header.jpg" alt="header" class="img-fluid"></div>
+            <div class="col-md-6"><img src="./img/header.jpg" alt="header" class="img-fluid"></div>
         </div>        
     </header>    
                 
@@ -40,17 +40,17 @@
     <section class="container-xl">
         <div class="row text-center justify-content-center">
             <div class="col-md-4 my-3">
-                <img src="img/icono_1.svg" alt="icon_image_1" class="img-fluid">
+                <img src="./img/icono_1.svg" alt="icon_image_1" class="img-fluid">
                 <h3 class="text-secondary">Únete a un grupo</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus error quidem facilis vel, sapiente impedit debitis reprehenderit</p>
             </div>
             <div class="col-md-4 my-3">
-                <img src="img/icono_2.svg" alt="icon_image_2" class="img-fluid">
+                <img src="./img/icono_2.svg" alt="icon_image_2" class="img-fluid">
                 <h3 class="text-secondary">Administra asistentes</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus error quidem facilis vel, sapiente impedit debitis reprehenderit</p>
             </div>
             <div class="col-md-4 my-3">
-                <img src="img/icono_3.svg" alt="icon_image_3" class="img-fluid">
+                <img src="./img/icono_3.svg" alt="icon_image_3" class="img-fluid">
                 <h3 class="text-secondary">Crece tu comunidad</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus error quidem facilis vel, sapiente impedit debitis reprehenderit</p>
             </div>            
@@ -69,7 +69,7 @@
             <div class="col-md-6 col-lg-3 ">
                 <div class="card border-0">
                     <div class="card-body">
-                        <img src="/img/evento_1.jpg" alt="evento1" class="card-img-top">
+                        <img src="./img/evento_1.jpg" alt="evento1" class="card-img-top">
                         <p class="card-text">10 de Diciembre de 2022 20:00 horas</p>
                         <h3 class="card-title">Diseño de apps con Swift</h3>
                         <p class="card-text descripcion ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero id cupiditate tempora repellendus</p>
@@ -80,7 +80,7 @@
             <div class="col-md-6 col-lg-3">
                 <div class="card border-0">
                     <div class="card-body">
-                        <img src="/img/evento_2.jpg" alt="evento2" class="card-img-top">
+                        <img src="./img/evento_2.jpg" alt="evento2" class="card-img-top">
                         <p class="card-text">10 de Diciembre de 2022 20:00 horas</p>
                         <h3 class="card-title">Marketting en Twitter</h3>
                         <p class="card-text descripcion ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero id cupiditate tempora repellendus</p>
@@ -90,7 +90,7 @@
             <div class="col-md-6 col-lg-3">
                 <div class="card border-0">
                     <div class="card-body">
-                        <img src="/img/evento_3.jpg" alt="evento3" class="card-img-top">
+                        <img src="./img/evento_3.jpg" alt="evento3" class="card-img-top">
                         <p class="card-text">10 de Diciembre de 2022 20:00 horas</p>
                         <h3 class="card-title">Ventas por internet</h3>
                         <p class="card-text descripcion ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero id cupiditate tempora repellendus</p>
@@ -100,7 +100,7 @@
             <div class="col-md-6 col-lg-3">
                 <div class="card border-0">
                     <div class="card-body">
-                        <img src="/img/evento_4.jpg" alt="evento4" class="card-img-top">
+                        <img src="./img/evento_4.jpg" alt="evento4" class="card-img-top">
                         <p class="card-text">10 de Diciembre de 2022 20:00 horas</p>
                         <h3 class="card-title">Todo sobre Bitcoin</h3>
                         <p class="card-text descripcion ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero id cupiditate tempora repellendus</p>
@@ -114,24 +114,24 @@
     <section class="container-xl">
         <div class="row">
             <div class="col-md-4">
-                <img src="img/app_1.png" alt="imagen app" class="img-fluid">
+                <img src="./img/app_1.png" alt="imagen app" class="img-fluid">
             </div>
             <div class="col-md-4">
-                <img src="img/logo.svg" alt="imagen app" class="img-fluid app_meeti mx-auto d-flex "> <!-- mx-auto pertenece a d-flex --> 
+                <img src="./img/logo.svg" alt="imagen app" class="img-fluid app_meeti mx-auto d-flex "> <!-- mx-auto pertenece a d-flex --> 
                 <h2 class="fw-bold fs-4 text-center">Mantente conectado. Descarga la 
                     aplicacion
                 </h2>
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="img/tienda-android.svg" alt="imagen app" class="img-fluid">
+                        <img src="./img/tienda-android.svg" alt="imagen app" class="img-fluid">
                     </div>
                     <div class="col-md-6">
-                        <img src="img/tienda-apple.svg" alt="imagen app" class="img-fluid">      
+                        <img src="./img/tienda-apple.svg" alt="imagen app" class="img-fluid">      
                     </div>
                 </div>                
             </div>
             <div class="col-md-4">
-                <img src="img/app_2.png" alt="imagen app" class="img-fluid">
+                <img src="./img/app_2.png" alt="imagen app" class="img-fluid">
             </div>
         </div>
     </section>
